--- a/src/sources/forus-webshop/scss/_common/components/_label.scss
+++ b/src/sources/forus-webshop/scss/_common/components/_label.scss
@@ -68,7 +68,7 @@
     }
 
     &.label-default {
-        background: #777;
+        background: var(--label-bg-color);
         color: #fff;
     }
 
