--- a/src/sources/forus-webshop/scss/_common/includes/common.scss
+++ b/src/sources/forus-webshop/scss/_common/includes/common.scss
@@ -73,7 +73,7 @@ img {
 }
 
 .text-muted {
-    color: #a1a1a1 !important;
+    color: var(--tc-muted) !important;
 }
 
 .text-muted-dim {
