--- a/src/sources/forus-webshop/scss/_common/sections/blocks/block-sign_up.scss
+++ b/src/sources/forus-webshop/scss/_common/sections/blocks/block-sign_up.scss
@@ -127,13 +127,13 @@
             }
 
             &.sign_up-step-active {
-                color: var(--sign_up_accent_color_light);
+                color: var(--color-primary);
 
                 .sign_up-step-border:before {
                     content: "";
                     display: block;
                     @include fill_parent();
-                    background-color: var(--sign_up_accent_color_light);
+                    background-color: var(--color-primary);
                 }
             }
 
@@ -540,7 +540,7 @@
                 .mdi {
                     display: flex;
                     font-size: 40px;
-                    opacity: .5;
+                    color: var(--sign_up_loader_icon_color);
                 }
             }
 
